# python-project-template

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  .ruff.toml  pyproject.toml
.github/: renovate.json
.github/workflows/: renovate.yaml
tests/: __init__.py
