[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "template"
description = "Template"
version = "0.1.0"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "mypy==1.14.*",
    "ruff==0.8.*",
    "pre-commit==4.0.*",
    "pytest==8.3.*",
    "pytest-asyncio==0.25.*",
]
